# mcp_os

./: .env.example  README.md  examples.py  package-lock.json  pyproject.toml  requirements.txt  server.py  smithery.yaml  test.py  test_a2a_agents.py  test_new_tools.py  test_server.py  test_workflow.py  workflow.py
src/: smithery.yaml
src/mcp_weather_server/: requirements.txt  server.py  workflow.py
src/mcp_weather_server/tools/: accuweather.py  alert_generation_tools.py  crop_calendar_tools.py  geographic_tools.py  google_weather.py  open_meteo.py  openai_llm.py  openweathermap.py
src/mcp_weather_server/utils/: weather_utils.py
