[tool.poetry]
name = "mcp-weather-server"
version = "1.0.0"
description = "MCP Weather Server for AI Agents"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
uvicorn = "^0.18.2"
requests = "^2.28.1"
anyio = "^3.7.1"
python-dotenv = "^0.20.0"
httpx = "^0.23.0"
openai = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
